# spreadsheet_to_json_cli

./: .env.example  2624609a-a634-44a9-830c-a354192cbba5.jsonl  Cargo.toml  LICENSE  README.md
examples/: gen_fixtures.rs
src/: args.rs  main.rs
tests/: cli.rs
tests/fixtures/: corrupt.xlsx  date_only.xlsx  header_gap.xlsx  multi_sheet.xlsx  not_a_spreadsheet.txt  products.csv  products.xlsm  products.xlsx  sample-data-1.xlsx  sample-data-2.ods  wide_columns.csv
