[package]
name = "spread-cli"
version = "0.1.0"
edition = "2021"
description = "Converts spreadsheets and CSV files to a friendly JSON format with many field name and data-type options."
repository = "https://github.com/neilg63/spreadsheet_to_json_cli"
categories = ["text-processing", "parsing", "command-line-utilities"]
keywords = ["cli", "spreadsheet", "excel", "csv", "json"]
license = "MIT"
# Test fixtures are only needed for `cargo test` from a git checkout, not for installing
# the binary -- keep them out of the published package.
exclude = ["tests/fixtures/*"]

[dependencies]
args = "^2.2.0"
clap = { version = "^4.6.1", features = ["env", "derive"] }
dotenv = { version = "^0.15.0", features = ["clap", "cli"] }
spreadsheet-to-json = "0.2.2"
to_segments = "0.1.2"
simple-string-patterns = "0.4.0"
uuid = { version = "^1.23.5", features = ["fast-rng", "v4"] }

[dev-dependencies]
rust_xlsxwriter = "0.89"
serde_json = "1.0"

